# health-pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data_files/: .gitkeep
dbt/: profiles.yml
dbt/models/: schema.yml
dbt/models/marts/: dim_patients.sql  fct_patient_claims_summary.sql
dbt/models/staging/: stg_clients.sql  stg_products.sql
lambda/: requirements.txt
scripts/: clean_health_products.py  load_data.py  load_lapses.py
solution_in_sql/dags/: health_pipeline_dag.py
solution_in_sql/data_files/: health_products_clean.csv
solution_in_sql/scripts/: create_schema.py  load_data.py  run_sql_pipeline.py
solution_in_sql/sql/ddl/: 03_populate_dims.sql  04_transformations_quality.sql
solution_python/: .gitignore  Dockerfile  README.md
solution_python/data_files/: health_products_clean.sha256
solution_python/dbt/: dbt_project.yml  profiles.yml
solution_python/dbt/models/: schema.yml
solution_python/dbt/models/staging/: stg_lapses.sql
solution_python/lambda/: handler.py
solution_python/scripts/: clean_health_products.py  create_schema.py  load_data.py  load_lapses.py  read_parquet.py
solution_python/sql/ddl/: 01_star_schema.sql
solution_python/tests/: test_lambda_handler.py
sql/ddl/: 01_star_schema.sql  02_transformations_quality.sql
tests/: test_clean_health_products.py
